# matchcore

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md  meson.build
include/: engine.h  order.h  symbol.h  trade.h  types.h
include/containers/: vector.h
include/engine/: book.h  engine.h  level.h  levelbucket.h  levelhashheap.h  order.h  trade.h
include/utility/: alloc.h  meson.build  pool.h
performance/: level.c  levelbucket.c  levelhashheap.c  levelhashheap.cpp  levelheap.c  leveltree.c  orderchunk.c  pool.c
source/: HashHeap.h  Level.h  LinkedArray.h  Main.cpp  alloc.c  alloc.h  book.c  book.cpp  book.h  config.h  engine.c  engine.h  hash_heap.h  level.c  level.h  levelbucket.c  levelbucket.h  levelhashheap.c  levelhashheap.cpp  levelhashheap.h  levelheap.c  levelheap.h  leveltree.c  leveltree.h  macros.h  main.c  main.cpp  meson.build  order.c  order.h  orderchunk.c  orderchunk.h  orderheap.c  orderheap.h  ordertracker.c  ordertracker.h  pool.c  pool.h  test.c  trade.c  (+3 more)
source/containers/: meson.build  vector.c
source/engine/: book.c  engine.c  level.c  levelbucket.c  levelhashheap.c  order.c  (+2 more)
src/: CMakeLists.txt  alloc.c  alloc.h  book.c  book.h  engine.c  level.c  level.h  levelchunk.c  levelheap.c  levelheap.h  leveltree.c  leveltree.h  macros.h  main.c  memory.c  memory.h  order.c  order.h  orderchunk.c  ordertree.h  pool.c  pool.h  rbtree.h  router.c  router.h  types.h
subprojects/: doctest.wrap  robin-map.wrap  unordered-dense.wrap
test/: level.c
tests/: level.c  levelchunk.c  leveltest.c  meson.build  pool.c  pooltest.c  test.h
(+8 files in other folders)
